--- a/onyx-demo-image-pyramiding/build.gradle
+++ b/onyx-demo-image-pyramiding/build.gradle
@@ -39,6 +39,10 @@ repositories {
     }
 }
 
+configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
