--- a/onyx-demo-image-pyramiding/src/main/AndroidManifest.xml
+++ b/onyx-demo-image-pyramiding/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!--<provider-->
+            <!--android:name="com.dft.onyxcamera.licensing.provider.LicenseContentProvider"-->
+            <!--android:authorities="com.dft.onyxcamera.licensing.provider.LicenseAPI"-->
+            <!--android:exported="false" />-->
     </application>
 
 </manifest>
